--- a/test/cloud_setup.yml
+++ b/test/cloud_setup.yml
@@ -1,8 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: Setup for testing s3 in the AWS cloud
+
 Resources:
   Bucket:
     Type: AWS::S3::Bucket
+
   User:
     Type: AWS::IAM::User
     Properties:
@@ -17,21 +19,27 @@ Resources:
                 Resource:
                   - !Sub arn:aws:s3:::${Bucket}
                   - !Sub arn:aws:s3:::${Bucket}/*
+                  - !Sub arn:aws:s3:::s3testingstack*
+                  
   AccessKey:
     Type: AWS::IAM::AccessKey
     Properties:
       Status: Active
       UserName: !Ref User
+
 Outputs:
   BucketName:
     Description: Name of the S3 testing bucket
     Value: !Ref Bucket
+
   UserArn:
     Description: IAM user with full access to S3
     Value: !GetAtt User.Arn
+
   UserAccessKeyId:
     Description: Access key id of the IAM user
     Value: !Ref AccessKey
+
   UserSecretAccessKey:
     Description: Secret access key of the IAM user
-    Value: !GetAtt AccessKey.SecretAccessKey
+    Value: !GetAtt AccessKey.SecretAccessKeys
