fix: cfn template typo

--- a/test/cloud_setup.yml
+++ b/test/cloud_setup.yml
@@ -42,4 +42,4 @@ Outputs:
 
   UserSecretAccessKey:
     Description: Secret access key of the IAM user
-    Value: !GetAtt AccessKey.SecretAccessKeys
+    Value: !GetAtt AccessKey.SecretAccessKey
