--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,21 @@ name: ci
 on: [push, pull_request, release]
 
 jobs:
-  test:
-    name: test s3 on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+  test_cloud:
+    name: test s3 in the cloud
+    runs-on: ubuntu-latest
+    env:
+      AWS_REGION: us-east-1
     steps:
       - name: clone repo
         uses: actions/checkout@v2.0.0
       - name: install deno
         uses: denolib/setup-deno@v2.0.0
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
       - name: run tests
-        run: exit 3 # TODO
+        run: deno test --allow-env --allow-read=$HOME/.aws --allow-net ./test/cloud_test.ts
